[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.12.0"
tokio-tungstenite = "0.14.0"
futures-util = "0.3.17"
futures-channel = "0.3"
url = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
openssl = "0.10"
base64 = "0.13"
